--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.20</version>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.9.1</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<java.version>1.8</java.version>
