--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,9 @@
 		</dependency>
 	</dependencies>
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>1.17</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
